[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "py-vibracore"
version = "0.3.1"
description = "Public python SDK for the CEMS VibraCore web-API."
requires-python = ">=3.11"
dependencies = [
    "pygef>=0.11.1,<0.12",
    "cems-nuclei[client]>=3.0.0, <4",
    "geopandas>=1.0.1,<2",
    "pyogrio>=0.10.0,<0.11",
    "scipy>=1.15.2,<2"
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["API", "VibraCore", "CEMS", "CRUX"]

[project.urls]
repository = "https://github.com/cemsbv/py-vibracore"

[project.optional-dependencies]
test = ["coveralls", "pytest", "requests-mock"]
docs = [
    "Sphinx==8.2.3",
    "sphinx-autodoc-typehints==3.1.0",
    "ipython==9.1.0",
    "asteroid-sphinx-theme==0.0.3",
    "sphinx_rtd_theme==3.0.2"
]
# lint dependencies from github super-linter v5
# See https://github.com/super-linter/super-linter/tree/main/dependencies/python
lint = [
    "ansible-lint==25.1.3",
    "black==25.1.0",
    "cfn-lint==1.25.1",
    "cpplint==2.0.0",
    "flake8==7.1.2",
    "isort==6.0.0",
    "mypy==1.15.0",
    "sqlfluff==3.3.1",
    "yamllint==1.35.1",
    "yq==3.4.3",
]
notebook = [
    "contextily>=1.6.2,<2",
    "tqdm[notebook]>=4.67.1,<5",
    "ipympl>=0.9.7,<0.10",
    "fiona>=1.10.1,<2",
]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
files = ["pyvibracore"]
mypy_path = 'src'
namespace_packages = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
disallow_subclassing_any = true
no_implicit_optional = true
disallow_untyped_defs = true
disallow_any_generics = false
disallow_untyped_calls = true
warn_return_any = false
no_implicit_reexport = true
strict_equality = true
install_types = true

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "requests.*",
    "pytest.*",
    "geopandas.*",
    "shapely.*",
    "pygef.*",
    "mpl_toolkits.*",
    "nuclei.*",
    "numpy.*",
    "scipy.*"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests/*"]
disallow_untyped_defs = false
disallow_untyped_calls = false
